<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashUnlockFragment">

    <fragment
        android:id="@+id/splashUnlockFragment"
        android:name="com.example.nutriprontuario.ui.splash.SplashUnlockFragment"
        android:label="@string/app_title"
        tools:layout="@layout/fragment_splash_unlock">
        <action
            android:id="@+id/action_splash_to_patientList"
            app:destination="@id/patientListFragment"
            app:popUpTo="@id/splashUnlockFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/patientListFragment"
        android:name="com.example.nutriprontuario.ui.patients.list.PatientListFragment"
        android:label="@string/patients_list"
        tools:layout="@layout/fragment_patient_list">
        <action
            android:id="@+id/action_list_to_form"
            app:destination="@id/patientFormFragment" />
        <action
            android:id="@+id/action_list_to_profile"
            app:destination="@id/patientProfileFragment" />
        <action
            android:id="@+id/action_list_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/patientFormFragment"
        android:name="com.example.nutriprontuario.ui.patients.form.PatientFormFragment"
        android:label="@string/new_patient"
        tools:layout="@layout/fragment_patient_form">
        <argument
            android:name="patientId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/patientProfileFragment"
        android:name="com.example.nutriprontuario.ui.patients.profile.PatientProfileFragment"
        android:label="@string/patient_profile"
        tools:layout="@layout/fragment_patient_profile">
        <argument
            android:name="patientId"
            app:argType="long" />
        <action
            android:id="@+id/action_profile_to_consultation"
            app:destination="@id/consultationFormFragment" />
        <action
            android:id="@+id/action_profile_to_measurement"
            app:destination="@id/measurementFormFragment" />
        <action
            android:id="@+id/action_profile_to_plan"
            app:destination="@id/planFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/consultationFormFragment"
        android:name="com.example.nutriprontuario.ui.consultations.ConsultationFormFragment"
        android:label="@string/new_consultation"
        tools:layout="@layout/fragment_consultation_form">
        <argument
            android:name="patientId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/measurementFormFragment"
        android:name="com.example.nutriprontuario.ui.measurements.MeasurementFormFragment"
        android:label="@string/new_measurement"
        tools:layout="@layout/fragment_measurement_form">
        <argument
            android:name="patientId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/planFormFragment"
        android:name="com.example.nutriprontuario.ui.plans.PlanFormFragment"
        android:label="@string/new_plan"
        tools:layout="@layout/fragment_plan_form">
        <argument
            android:name="patientId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.nutriprontuario.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
